# steam-compatdata-corrector

./: .gitignore  pyproject.toml
src/corrector/: __main__.py
