[tool.poetry]
name = "steam-compatdata-corrector"
version = "0.1.0"
description = ""
authors = ["Ashleigh Udoh <ash@audoh.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
vdf = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
